# rimlesswheel

./: CMakeLists.txt  README.md
lib/drawstuff/: .README.txt.icloud  .libdrawstuff.a.icloud  .libdrawstuff64.a.icloud  README.txt
lib/drawstuff/textures/: .checkered.ppm.icloud  .ground.ppm.icloud  .sky.ppm.icloud  .wood.ppm.icloud
matlab/: RimlessStiffEOM.mt  invPendulumLimitCycle.m  pranavEOM.m  simpleLimitCycle.m
matlab/EOM/: ddt.m  rimlessEOM.m  rimlessSS.m  springsLagrangian.m  stiffLagrangian.m
matlab/data/: RimlessEOM.mat  RimlessStiffEOM.mat  jointdata.txt
matlab/double_pendulum/: animate_pendulum.m  double_pendulum_eom.m  eom.m  lagrangian.m  v2dpend.m
matlab/rimless_wheel/: integrate.m  model.mat
matlab/rimless_wheel/DP_rimless_wheel/: main.m  onestep.m
matlab/rimless_wheel/data/: network.mat  network_desired_speed_-0.0406.mat  network_desired_speed_-0.0824.mat  network_desired_speed_-0.1242.mat  network_desired_speed_-0.166.mat  network_desired_speed_-0.2078.mat  network_desired_speed_-0.2484.mat  network_desired_speed_-0.2496.mat  network_desired_speed_-0.276.mat  network_desired_speed_-0.2914.mat  network_desired_speed_-0.3036.mat  network_desired_speed_-0.3312.mat  network_desired_speed_-0.3332.mat  network_desired_speed_-0.3588.mat  network_desired_speed_-0.375.mat  network_desired_speed_-0.3864.mat  network_desired_speed_-0.414.mat  network_desired_speed_-0.4168.mat  network_desired_speed_-0.4416.mat  network_desired_speed_-0.4586.mat  network_desired_speed_-0.4692.mat  network_desired_speed_-0.4968.mat  network_desired_speed_-0.5004.mat  network_desired_speed_-0.5244.mat  network_desired_speed_-0.5422.mat  network_desired_speed_-0.552.mat  network_desired_speed_-0.5796.mat  network_desired_speed_-0.584.mat  network_desired_speed_-0.6072.mat  network_desired_speed_-0.6258.mat  network_desired_speed_-0.6348.mat  network_desired_speed_-0.6624.mat  network_desired_speed_-0.6676.mat  network_desired_speed_-0.69.mat  network_desired_speed_-0.7094.mat  (+176 more)
matlab/rimlesswheelv2/: generate_cost_network.m  generate_network.m  generate_network_connections.m  main_memoize.m  network_search.m  networkdetails.m  parallel_network_test.mat  parallelnettest.m  snglcrenettest.m  untitled.m  untitled2.m
matlab/single_pendulum/: cost.m  discrete_prop.m  evaluateConnection.m  evaluatePath.m  everyone.m  generate_network.m  generate_new_state.m  initialize_NODES.m  network_search.m  networkdetails.m  recursive_iteration.m  show_pendulum.m  unit_test_generate_new_state.m  unit_test_xnplusone.m  value_iteration.m  value_iteration_function.m  xnplusone.m
sdfast/src/animate/: CMakeLists.txt  animate.cpp  octConverter.cpp
src/: CMakeLists.txt
src/animate/: CMakeLists.txt  animate.cpp  octConverter.cpp
src/sd/: CMakeLists.txt  sd_d.c  sd_s.c  sdlib.c
src/simulation/: CMakeLists.txt  constraints.c  constraints.h  initialize.c  initialize.h  mexSim.c
src/utility/: CMakeLists.txt  Globals.h  link.cpp  link.h
(+884 files in other folders)
